--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf8">
     <title>Tab Refresh</title>
+    <link rel="stylesheet" href="global.css">
   </head>
   <body>
     <div id="app"></div>
